# RouterScraper

./: .gitignore  Makefile  README.md  README.md.license  pyproject.toml  setup.py
LICENSES/: MIT.txt
developerscripts/: create_venv.sh  run_flake8.sh  run_reuse.sh  run_tests.sh
examples/: fastgate_dn8245f2.py  technicolor_tg789vacv2.py  tplink_m7000.py
routerscraper/: basescraper.py  dataTypes.py  fastgate_dn8245f2.py  requestResult.py  technicolor_tg789vacv2.py
src/routerscraper/: __init__.py  basescraper.py  dataTypes.py  fastgate_dn8245f2.py  requestscraper.py  seleniumscraper.py  technicolor_tg789vacv2.py  tplink_m7000.py
tests/: helpers_basescraper.py  helpers_common.py  helpers_fastgate_dn8245f2.py  helpers_requestscraper.py  helpers_technicolor_tg789vacv2.py  test_basescraper.py  test_fastgate_dn8245f2.py  test_requestscraper.py  test_technicolor_tg789vacv2.py
tests/files_technicolor_tg789vacv2/: device-modal_ISO-8859-1.html  mustLogin_ISO-8859-1.html
