###############################################################################
#
# pyproject.toml - File with build configuration.
#
# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2022 fra87
#

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'routerscraper'
version = '0.3.1'
authors = [{name = 'fra87'}]
description = 'A python package to interact with different routers'
readme = 'README.md'
license = {file = 'LICENSES/MIT.txt'}
requires-python = '>=3.7'
keywords = [
    'router',
    'scraping',
    'scrape',
    'harvest'
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Networking :: Monitoring'
]
dependencies = [
    'srp',
    'beautifulsoup4',
    'requests',
    'selenium'
]

[project.optional-dependencies]
dev = [
    'flake8', 'reuse', 'bumpver',
    'build', 'twine',
    'pip', 'setuptools', 'wheel'
]

[project.urls]
Homepage = 'https://github.com/fra87/RouterScraper'

[tool.setuptools.packages.find]
where = ['src']

[tool.bumpver]
current_version = '0.3.1'
version_pattern = 'MAJOR.MINOR.PATCH'
commit_message  = 'Bump version {old_version} -> {new_version}'
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
'pyproject.toml' = ["current_version = '{version}'", "version = '{version}'"]
'src/routerscraper/__init__.py' = ['{version}']
